fix squished expanded demo in both lists

--- a/juggle-recommender-web/src/smallTrickList.css
+++ b/juggle-recommender-web/src/smallTrickList.css
@@ -66,9 +66,7 @@
   max-height: auto;
 }
 .smallListMainCard{
-  height: 55px;
-  display : flex;
-  align-items : center;
+  display: block;
 }
 .smallListCardInfo{
   display: inline-block;
